--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiofiles>=25.1.0",
     "beautifulsoup4>=4.14.2",
     "httpx>=0.28.1",
     "pydantic>=2.12.4",
+    "pymupdf>=1.26.6",
     "python-dotenv>=1.2.1",
 ]
