--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "aiofiles>=25.1.0",
     "beautifulsoup4>=4.14.2",
     "httpx>=0.28.1",
+    "langchain>=1.0.8",
+    "langchain-openai>=1.0.3",
     "pydantic>=2.12.4",
     "pymupdf>=1.26.6",
     "python-dotenv>=1.2.1",
